<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.suntek</groupId>
	<artifactId>data-algorithm</artifactId>
	<version>3.0.0-release</version>
	<packaging>jar</packaging>
	<name>data-algorithm</name>
	<description>分析算法引擎</description>

	<properties>
		<vendor>suntek</vendor>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<jdk.version>1.8</jdk.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>
		<mysql.version>5.1.40</mysql.version>
		<fastjson.version>1.2.60</fastjson.version>
		<lombok.version>1.18.0</lombok.version>
		<resource.delimiter>${}</resource.delimiter>
		<json-path.version>2.4.0</json-path.version>
		<scala.version>2.11.8</scala.version>
        <spark.version>2.4.0</spark.version>
        <slf4j-api.version>1.7.25</slf4j-api.version>
        <postgresql.version>9.4.1212</postgresql.version>
		<hive-jdbc.version>1.2.1</hive-jdbc.version>
		<argLine>-Dfile.encoding=UTF-8</argLine>
	</properties>

	<profiles>
		<profile>
			<id>test</id>
			<properties>
				<profiles.active>test</profiles.active>
			</properties>
		</profile>
		<profile>
			<id>prod</id>
			<properties>
				<profiles.active>prod</profiles.active>
			</properties>
			<activation>
				<activeByDefault>true</activeByDefault>
			</activation>
		</profile>
	</profiles>

	<dependencies>
		<!--<dependency>-->
			<!--<groupId>com.fasterxml.jackson.core</groupId>-->
			<!--<artifactId>jackson-databind</artifactId>-->
			<!--<version>2.6.7 </version>-->
		<!--</dependency>-->
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>28.0-jre</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>${postgresql.version}</version>
		</dependency>
		<dependency>
			<groupId>com.inforefiner.snowball</groupId>
			<artifactId>snowball-jdbc</artifactId>
			<version>0.1.50</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.alibaba</groupId>
			<artifactId>druid</artifactId>
			<version>1.0.15</version>
			<!--<scope>provided</scope>-->
		</dependency>
		<dependency>
			<groupId>redis.clients</groupId>
			<artifactId>jedis</artifactId>
			<version>2.9.0</version>
			<scope>compile</scope>
		</dependency>

		<dependency>
			<groupId>mysql</groupId>
			<artifactId>mysql-connector-java</artifactId>
			<version>5.1.34</version>
		</dependency>

		<dependency>
			<groupId>org.apache.hive</groupId>
			<artifactId>hive-jdbc</artifactId>
			<version>${hive-jdbc.version}</version>
		</dependency>

		<dependency>
			<groupId>net.oschina.j2cache</groupId>
			<artifactId>j2cache-core</artifactId>
			<version>2.8.0-release</version>
			<exclusions>
				<exclusion>
					<groupId>redis.clients</groupId>
					<artifactId>jedis</artifactId>
				</exclusion>
				<exclusion>
					<groupId>jline</groupId>
					<artifactId>jline</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>4.1.2</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml-schemas</artifactId>
			<version>4.1.0</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-library</artifactId>
			<version>${scala.version}</version>
		</dependency>

		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-reflect</artifactId>
			<version>${scala.version}</version>
		</dependency>

		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-compiler</artifactId>
			<version>${scala.version}</version>
		</dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-core_2.11</artifactId>
            <version>${spark.version}</version>
			<!--<scope>provided</scope>-->
        </dependency>

        <!-- https://mvnrepository.com/artifact/org.apache.spark/spark-sql -->
        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-sql_2.11</artifactId>
            <version>${spark.version}</version>
			<!--<scope>provided</scope>-->
        </dependency>

		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId>spark-catalyst_2.11</artifactId>
			<version>${spark.version}</version>
		</dependency>

        <dependency>
            <groupId>org.apache.spark</groupId>
            <artifactId>spark-mllib_2.11</artifactId>
            <version>${spark.version}</version>
			<!--<scope>provided</scope>-->
        </dependency>

		<dependency>
			<groupId>org.apache.spark</groupId>
			<artifactId> spark-hive_2.11</artifactId>
			<version> 2.4.0</version>
			<!--<scope>provided</scope>-->
		</dependency>

        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.4</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>${slf4j-api.version}</version>
            <!--<scope>provided</scope>-->
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.25</version>
            <scope>test</scope>
        </dependency>

		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
		</dependency>

		<dependency>
			<groupId>com.inforefiner.snowball</groupId>
			<artifactId>snowball-jdbc</artifactId>
			<version>2.4.0</version>
		</dependency>
		<dependency>
			<groupId>io.searchbox</groupId>
			<artifactId>jest</artifactId>
			<version>5.3.3</version>
		</dependency>
		<dependency>
			<groupId>com.huawei</groupId>
			<artifactId>gsjdbc4</artifactId>
			<version>6.5.1</version>
			<classifier>V300R002C00</classifier>
		</dependency>

		<!-- 雪球 依赖包 -->
		<dependency>
			<groupId>org.apache.parquet</groupId>
			<artifactId>parquet-common</artifactId>
			<version>1.10.0</version>
		</dependency>
		<dependency>
			<groupId>org.apache.parquet</groupId>
			<artifactId>parquet-hadoop</artifactId>
			<version>1.10.0</version>
		</dependency>



	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>net.alchim31.maven</groupId>
				<artifactId>scala-maven-plugin</artifactId>
				<version>3.2.2</version>
				<executions>
					<execution>
						<id>eclipse-add-source</id>
						<goals>
							<goal>add-source</goal>
						</goals>
					</execution>
					<execution>
						<id>scala-compile-first</id>
						<phase>process-resources</phase>
						<goals>
							<goal>compile</goal>
						</goals>
					</execution>
					<execution>
						<id>scala-test-compile-first</id>
						<phase>process-test-resources</phase>
						<goals>
							<goal>testCompile</goal>
						</goals>
					</execution>
					<execution>
						<id>attach-scaladocs</id>
						<phase>verify</phase>
						<goals>
							<goal>doc-jar</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<scalaVersion>${scala.version}</scalaVersion>
					<recompileMode>incremental</recompileMode>
					<useZincServer>true</useZincServer>
					<args>
						<arg>-unchecked</arg>
						<arg>-deprecation</arg>
						<arg>-feature</arg>
					</args>
					<!--<jvmArgs>-->
						<!--<jvmArg>-Xms1024m</jvmArg>-->
						<!--<jvmArg>-Xmx1024m</jvmArg>-->
						<!--<jvmArg>-XX:PermSize=${PermGen}</jvmArg>-->
						<!--<jvmArg>-XX:MaxPermSize=${MaxPermGen}</jvmArg>-->
						<!--<jvmArg>-XX:ReservedCodeCacheSize=${CodeCacheSize}</jvmArg>-->
					<!--</jvmArgs>-->
					<!--<javacArgs>-->
						<!--<javacArg>-source</javacArg>-->
						<!--<javacArg>${java.version}</javacArg>-->
						<!--<javacArg>-target</javacArg>-->
						<!--<javacArg>${java.version}</javacArg>-->
						<!--<javacArg>-Xlint:all,-serial,-path</javacArg>-->
					<!--</javacArgs>-->
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<configuration>
					<archive>
						<manifest>
							<addClasspath>true</addClasspath>
							<useUniqueVersions>false</useUniqueVersions>
							<!--<mainClass>com.xxl.job.executor.XxlJobExecutorApplication</mainClass>-->
						</manifest>
						<manifestEntries>
							<Specification-Vendor>${vendor}</Specification-Vendor>
							<Implementation-Vendor>${vendor}</Implementation-Vendor>
							<Implementation-Title>${project.artifactId}</Implementation-Title>
							<Implementation-Version>${project.version}</Implementation-Version>
						</manifestEntries>
					</archive>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<finalName>data-algorithm</finalName>
					<descriptors>
						<descriptor>src/assembly/assembly.xml</descriptor>
					</descriptors>
					<archive>
						<manifestEntries>
							<Specification-Vendor>${vendor}</Specification-Vendor>
							<Implementation-Vendor>${vendor}</Implementation-Vendor>
							<Implementation-Title>${project.artifactId}</Implementation-Title>
							<Implementation-Version>${project.version}</Implementation-Version>
						</manifestEntries>
					</archive>
				</configuration>
				<executions>
					<execution>
						<id>make-assembly</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
